--- a/knex-relationships-stories/views/adduser.hbs
+++ b/knex-relationships-stories/views/adduser.hbs
@@ -7,6 +7,8 @@
       <form method="POST">
           Name: <input name="name" />
           Email: <input name="email" />
+          Url: <input name="url" />
+          Image: <input name="img_url" />
           <input type="submit" value="Submit">
       </form>
   </body>
