--- a/knex-relationships-stories/views/index.hbs
+++ b/knex-relationships-stories/views/index.hbs
@@ -9,6 +9,7 @@
       <li><a href="/users/{{id}}">{{name}} ({{email}})</a></li>
     {{/each}}
     <hr>
+    <a href="/posts">Blog Posts</a>
     <a href="/adduser">Add a User</a>
     </ul>
   </body>
