--- a/knex-relationships-stories/views/user.hbs
+++ b/knex-relationships-stories/views/user.hbs
@@ -8,5 +8,7 @@
       <img src={{img_url}}>
       <p>Email them at: <a href="mailto:{{email}}">{{email}}</a></p>
       <p>Their website is: <a href="http://{{url}}">{{url}}</a></p>
+      <hr>
+      <a href="/">Home</a>
   </body>
 </html>
