--- a/knex-relationships-stories/views/user.hbs
+++ b/knex-relationships-stories/views/user.hbs
@@ -9,6 +9,7 @@
       <p>Email them at: <a href="mailto:{{email}}">{{email}}</a></p>
       <p>Their website is: <a href="http://{{url}}">{{url}}</a></p>
       <hr>
+      <a href="/users/edit/{{id}}"> Edit me!</a>
       <a href="/">Home</a>
   </body>
 </html>
